--- a/src/app/filme-list/filme-list.component.html
+++ b/src/app/filme-list/filme-list.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" xmlns="http://www.w3.org/1999/html">
   <div class="card-body">
     <div class="card-title">Lista de Filmes</div>
     <div class="row">
@@ -17,13 +17,14 @@
           </thead>
           <tbody>
                   <ng-container *ngFor=" let filme of filmeList;">
+                    <tr>
                     <th scope="row">{{filme.id}}</th>
                     <td>{{(filme?.titulo)}}</td>
                     <td>{{(filme?.dataLancamento | date: 'dd/MM/yyyy')}}</td>
                     <td>{{(filme?.precoBilhete | currency: 'BRL')}}</td>
                     <td>{{(filme?.genero)}}</td>
                     <td>{{(filme?.classificacao)}}</td>
-
+                    </tr>
                   </ng-container>
           </tbody>
         </table>
