--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,4 +5,4 @@
 >
 </h1>
 <h2>Algasdasdasdasdasdsa</h2>
-<a href="https://blogs.oracle.com/lad-cloud-experts-pt/post/como-utilizar-um-docker-registry-gratuito-no-oci">Como utilizar docker</a>
+<a href="https://blogs.oracle.com/lad-cloud-experts-pt/post/como-utilizar-um-docker-registry-gratuito-no-oci" target="_blank">Como utilizar docker</a>
